--- a/resources/sass/object/component/_c-form.scss
+++ b/resources/sass/object/component/_c-form.scss
@@ -30,6 +30,16 @@
       &.-empty {
          margin-top: 12px;
       }
+      & > br {
+         display: none;
+      }
+      @include mq('xs') {
+         line-height: 1.3;
+         text-align: right;
+         & > br {
+            display: block;
+         }
+      }
    }
    &__invalid {
       font-size: 13px;
