--- a/resources/sass/object/component/_c-card.scss
+++ b/resources/sass/object/component/_c-card.scss
@@ -28,7 +28,7 @@
    box-shadow: rgba(0, 0, 0, 0.18) 2px 2px 6px;
    @include mq('xs') {
       width: 48%;
-      height: 210px;
+      height: 220px;
       margin: 0 10px 10px 0;
       &:nth-child(2n) {
          margin-right: 0;
@@ -73,6 +73,15 @@
       &.-end {
          background-color: $gray-600;
       }
+      @include mq('xs') {
+         width: 35px;
+         height: 35px;
+         font-size: 11px;
+      }
+      @include mq('3xs') {
+         top: 0;
+         right: 0;
+      }
    }
    &__nameWrap {
       @include ellipsis;
@@ -80,6 +89,9 @@
       top: 11px;
       left: 11px;
       width: 80%;
+      @include mq('2xs') {
+         width: 65%;
+      }
       @include mq('3xs') {
          left: 6px;
       }
@@ -107,9 +119,12 @@
       scrollbar-width: none; /* Firefox 対応 */
       @include mq('xs') {
          width: 100%;
-         height: 70px;
+         height: 90px;
          padding: 6px 7px;
          font-size: 12px;
+      }
+      @include mq('2xs') {
+         font-size: 11px;
       }
       @include mq('3xs') {
          padding: 3px 6px;
@@ -139,6 +154,9 @@
          @include mq('2xs') {
             font-size: 35px;
          }
+         @include mq('3xs') {
+            font-size: 33px;
+         }
       }
       &.-share {
          margin-left: 5px;
@@ -148,6 +166,9 @@
          }
          @include mq('2xs') {
             font-size: 35px;
+         }
+         @include mq('3xs') {
+            font-size: 33px;
          }
       }
    }
@@ -214,6 +235,9 @@
       margin-top: 10px;
       font-size: 14px;
       font-weight: bold;
+      @include mq('3xs') {
+         font-size: 13px;
+      }
    }
 }
 
@@ -224,14 +248,16 @@
 %c-msgCard__basicInfo {
    @include border-radius('all', 50px);
    @include ellipsis;
-   max-width: 80%;
+   max-width: 70%;
    padding: 5px 15px;
    overflow: hidden;
    font-size: 11px;
    color: $white;
    background-color: $primary;
    @include mq('xs') {
+      max-width: 65%;
       padding: 5px 10px;
+      font-size: 10px;
    }
 }
 
@@ -273,13 +299,6 @@
    }
    &__basicInfo {
       @extend %c-msgCard__basicInfo; // 継承
-      @include mq('xs') {
-         max-width: 70%;
-         font-size: 10px;
-      }
-      @include mq('3xs') {
-         max-width: 65%;
-      }
    }
    &__msgTime {
       margin-top: 4px;
@@ -292,6 +311,12 @@
    }
    &__msgWrap {
       width: 95%;
+      @include mq('md') {
+         width: 90%;
+      }
+      @include mq('xs') {
+         width: 85%;
+      }
    }
    &__msgTitle {
       @include ellipsis;
@@ -364,12 +389,7 @@
       @extend %c-msgCard__basicInfo; // 継承
       margin-top: 6px;
       @include mq('xs') {
-         max-width: 70%;
          margin-top: 0;
-         font-size: 10px;
-      }
-      @include mq('2xs') {
-         max-width: 65%;
       }
    }
    &__time {
@@ -386,7 +406,11 @@
       width: 95%;
       padding-top: 2px;
       font-size: 12px;
+      @include mq('md') {
+         width: 90%;
+      }
       @include mq('xs') {
+         width: 85%;
          font-size: 11px;
       }
    }
