--- a/resources/sass/object/project/_p-applicant.scss
+++ b/resources/sass/object/project/_p-applicant.scss
@@ -24,11 +24,19 @@
       margin-bottom: 30px;
       font-size: 18px;
       text-align: left;
+      word-break: break-all;
       background-color: $primary-light;
       border-left: 7px solid $primary;
+      @include mq('md') {
+         font-size: 16px;
+      }
+      @include mq('xs') {
+         margin-bottom: 20px;
+         font-size: 14px;
+      }
       @include mq('3xs') {
          margin-bottom: 20px;
-         font-size: 15px;
+         font-size: 13px;
       }
    }
    // 応募者ユーザー
@@ -44,12 +52,13 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 100%;
+      width: 85%;
       padding: 5px 20px;
       &.-decision {
          background-color: lightpink;
       }
       @include mq('xs') {
+         width: 75%;
          padding: 5px 15px;
       }
       @include mq('3xs') {
@@ -58,11 +67,8 @@
    }
    &__user {
       display: flex;
-      flex-basis: 80%;
       align-items: center;
-      @include mq('xs') {
-         flex-basis: 70%;
-      }
+      width: 85%;
    }
    &__userImg {
       width: 40px;
@@ -74,12 +80,13 @@
       }
    }
    &__userName {
+      @include ellipsis;
       font-size: 14px;
+      word-break: break-all;
       @include mq('xs') {
-         font-size: 13px;
+         font-size: 12px;
       }
       @include mq('3xs') {
-         @include ellipsis;
          width: 120px;
       }
    }
@@ -88,9 +95,6 @@
       width: 25px;
       margin-right: 10px;
       @include mq('xs') {
-         margin-right: 5px;
-      }
-      @include mq('3xs') {
          margin-right: 0;
       }
       &.-create {
@@ -103,6 +107,9 @@
          @include mq('xs') {
             font-size: 20px;
          }
+         @include mq('3xs') {
+            font-size: 19px;
+         }
       }
    }
    &__dmBoardCreateForm {
@@ -111,9 +118,9 @@
    }
    &__decideForm {
       @include border-radius('right', 5px);
-      flex-basis: 20%;
+      width: 15%;
       @include mq('xs') {
-         flex-basis: 30%;
+         width: 25%;
          font-size: 13px;
       }
       @include mq('3xs') {
@@ -134,5 +141,8 @@
       height: 100%;
       font-size: 14px;
       color: $white;
+      @include mq('xs') {
+         font-size: 12px;
+      }
    }
 }
