--- a/resources/sass/object/project/_p-profile-edit.scss
+++ b/resources/sass/object/project/_p-profile-edit.scss
@@ -85,7 +85,8 @@
       font-size: 14px;
       @include mq('md') {
          width: 100%;
-         margin-bottom: 3px;
+         margin-top: 10px;
+         margin-bottom: -12px; // ラベルと説明書きの位置調整
          font-size: 13px;
       }
       &.-name > span,
@@ -110,6 +111,7 @@
    }
    &__textarea {
       width: 100%;
+      height: 30vh;
    }
    &__editBtn {
       display: block;
