--- a/resources/sass/object/project/_p-pubmsg.scss
+++ b/resources/sass/object/project/_p-pubmsg.scss
@@ -58,15 +58,15 @@
    &__parentMsgWrap {
       @include border-radius;
       display: flex;
-      padding: 20px 20px 50px;
+      padding: 20px 20px 30px;
       @include mq('md') {
-         padding: 20px 20px 50px;
+         padding: 20px 20px 30px;
       }
       @include mq('xs') {
-         padding: 15px 15px 50px;
+         padding: 15px 15px 30px;
       }
       @include mq('3xs') {
-         padding: 15px 12px 50px;
+         padding: 15px 12px 30px;
       }
    }
    &__parentImg {
@@ -149,7 +149,7 @@
       position: absolute;
       top: 13px;
       right: 18px;
-      padding: 5px 10px;
+      padding: 5px 0;
       font-size: 12px;
       color: $gray-600;
       @include mq('3xs') {
