--- a/public/css/app.css
+++ b/public/css/app.css
@@ -405,6 +405,12 @@ pre {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 810px) {
+  .container {
+    max-width: 810px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .container {
     max-width: 768px;
@@ -485,6 +491,12 @@ pre {
 .l-main__mainArea.-oneColumn_auth {
   width: 50%;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 992px) {
+  .l-main__mainArea.-oneColumn_auth {
+    width: 60%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -596,6 +608,13 @@ pre {
 .c-badge__mark.-direct {
   top: 8px;
   left: 30px;
+}
+
+@media screen and (max-width: 810px) {
+  .c-badge__mark.-public,
+  .c-badge__mark.-direct {
+    left: 25px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -1085,7 +1104,7 @@ pre {
   width: 95%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .c-pubMsgCard__msgWrap {
     width: 90%;
   }
@@ -1223,7 +1242,7 @@ pre {
   font-size: 12px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .c-dmMsgCard__dm {
     width: 90%;
   }
@@ -1314,7 +1333,7 @@ pre {
   color: #dc3545;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .c-form__invalid {
     font-size: 12px;
   }
@@ -1467,7 +1486,7 @@ pre {
   background-color: #fff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .c-h2__workCardBody {
     padding-left: calc(50% - 215px);
   }
@@ -1556,7 +1575,7 @@ pre {
   padding: 50px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-applicant__body {
     padding: 50px 30px;
   }
@@ -1588,7 +1607,7 @@ pre {
   border-left: 7px solid #0081ff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-applicant__head {
     font-size: 16px;
   }
@@ -1793,7 +1812,7 @@ pre {
   padding: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-changePass__inputWrap {
     width: 100%;
   }
@@ -1908,6 +1927,12 @@ pre {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 810px) {
+  .p-dm__h2AllInfoWrap {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -2138,7 +2163,7 @@ pre {
   width: 110px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-header__logo {
     margin-left: 5px;
   }
@@ -2232,6 +2257,16 @@ pre {
 
 .p-header__item {
   margin-right: 18px;
+}
+
+@media screen and (max-width: 810px) {
+  .p-header__item {
+    margin-right: 14px;
+  }
+
+  .p-header__item.-orderBtn {
+    margin-right: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -2365,7 +2400,7 @@ pre {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 75px;
+  max-width: 70px;
 }
 
 @media screen and (max-width: 414px) {
@@ -2662,7 +2697,7 @@ pre {
   left: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__freeBtnWrap.-top {
     bottom: 100px;
   }
@@ -2835,7 +2870,7 @@ pre {
   margin-right: -15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCards {
     flex-wrap: wrap;
   }
@@ -2848,7 +2883,7 @@ pre {
   margin-right: 15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCard {
     flex: 1 1 100%;
     margin-bottom: 25px;
@@ -2863,7 +2898,7 @@ pre {
   line-height: 25px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCardHead {
     padding: 0;
   }
@@ -2895,7 +2930,7 @@ pre {
   background: linear-gradient(transparent 50%, #bedcfd 0%);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCardHead > span > br {
     display: none;
   }
@@ -2915,7 +2950,7 @@ pre {
   border: 1px solid #ced4da;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCardWrap {
     flex-direction: row;
   }
@@ -2945,10 +2980,10 @@ pre {
   object-fit: cover;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCardImg {
     width: 33%;
-    height: auto;
+    height: 100%;
   }
 }
 
@@ -2967,7 +3002,7 @@ pre {
   letter-spacing: 1.3px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-home__canCardText {
     display: flex;
     align-items: center;
@@ -3247,7 +3282,7 @@ pre {
   padding: 5px 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-profileEdit__wrap {
     flex-direction: column;
     padding: 0;
@@ -3262,7 +3297,7 @@ pre {
   font-size: 14px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-profileEdit__label {
     width: 100%;
     margin-top: 10px;
@@ -3290,7 +3325,7 @@ pre {
   width: 75%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-profileEdit__inputWrap {
     width: 100%;
   }
@@ -3350,7 +3385,7 @@ pre {
   border: 2px solid #e9ecef;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-profile__proImg {
     width: 85px;
     height: 85px;
@@ -3372,7 +3407,7 @@ pre {
   padding: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-profile__proSecond {
     padding: 30px 20px;
   }
@@ -3558,12 +3593,6 @@ pre {
   padding: 20px 20px 30px;
 }
 
-@media screen and (max-width: 768px) {
-  .p-pubmsg__parentMsgWrap {
-    padding: 20px 20px 30px;
-  }
-}
-
 @media screen and (max-width: 414px) {
   .p-pubmsg__parentMsgWrap {
     padding: 15px 15px 30px;
@@ -3582,7 +3611,7 @@ pre {
   margin-right: 8px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-pubmsg__parentImg {
     display: none;
   }
@@ -3592,7 +3621,7 @@ pre {
   width: 90%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-pubmsg__parentRight {
     width: 100%;
   }
@@ -3703,7 +3732,7 @@ pre {
   margin-right: 8px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-pubmsg__childImg {
     display: none;
   }
@@ -3713,7 +3742,7 @@ pre {
   width: 88%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-pubmsg__childRight {
     width: 100%;
   }
@@ -3788,7 +3817,7 @@ pre {
   list-style: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 414px) {
   .p-side__lists.-settings {
     width: 100%;
   }
@@ -3807,10 +3836,16 @@ pre {
   background-color: #fff;
 }
 
+@media screen and (max-width: 810px) {
+  .p-side__link {
+    padding-left: 15px;
+    font-size: 12px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .p-side__link {
     padding-left: 11px;
-    font-size: 12px;
   }
 
   .p-side__link.-settings {
@@ -3849,7 +3884,7 @@ pre {
   padding: 30px 50px 50px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workDetail__workBody {
     padding: 30px 20px 50px;
   }
@@ -3896,7 +3931,7 @@ pre {
   border-left: 7px solid #0081ff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workDetail__head {
     font-size: 16px;
   }
@@ -4290,7 +4325,7 @@ pre {
   padding: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__wrap {
     flex-direction: column;
     padding: 0;
@@ -4317,7 +4352,7 @@ pre {
   transition: 0.2s;
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 810px) {
   .p-workForm__wrap.-price.is-active {
     margin-top: 0;
   }
@@ -4335,7 +4370,7 @@ pre {
   margin-top: 37px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__label.-work {
     margin-top: 0;
     margin-bottom: -11px;
@@ -4352,14 +4387,14 @@ pre {
   margin-top: 27px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__label.-orderContent {
     margin-top: 10px;
     margin-bottom: -10px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__label {
     width: 100%;
     margin-bottom: 3px;
@@ -4380,7 +4415,7 @@ pre {
   width: 75%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__inputWrap {
     width: 100%;
     margin-bottom: 10px;
@@ -4396,7 +4431,7 @@ pre {
   content: "\203B   \6700\5927\8A2D\5B9A\91D1\984D\306F  1000\5343\5186\307E\3067\FF08\5358\4F4D\306F\300C\5343\5186\300D\FF09";
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__inputWrap.-price::before {
     left: 80px;
   }
@@ -4418,7 +4453,7 @@ pre {
   background-color: #fff;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__input {
     font-size: 13px;
   }
@@ -4432,7 +4467,7 @@ pre {
   width: 70%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__input.-email {
     width: 100%;
   }
@@ -4444,7 +4479,7 @@ pre {
   width: 70%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__input.-endDate,
   .p-workForm__input.-hopeDate,
   .p-workForm__input.-contract {
@@ -4456,13 +4491,13 @@ pre {
   width: 30%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__input.-price + span {
     font-size: 13px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 810px) {
   .p-workForm__textarea {
     font-size: 13px;
   }
