--- a/resources/sass/object/project/_p-home.scss
+++ b/resources/sass/object/project/_p-home.scss
@@ -132,7 +132,7 @@
          right: 0;
          bottom: 200px;
          left: 0;
-         @include mq('md') {
+         @include mq('lg-md') {
             bottom: 100px;
          }
          @include mq('xs') {
@@ -263,7 +263,7 @@
    &__canCards {
       display: flex;
       margin-right: -15px;
-      @include mq('md') {
+      @include mq('lg-md') {
          flex-wrap: wrap;
       }
    }
@@ -273,7 +273,7 @@
       flex-direction: column;
       margin-right: 15px;
 
-      @include mq('md') {
+      @include mq('lg-md') {
          flex: 1 1 100%;
          margin-bottom: 25px;
       }
@@ -284,7 +284,7 @@
       font-size: 20px;
       font-weight: bold;
       line-height: 25px;
-      @include mq('md') {
+      @include mq('lg-md') {
          padding: 0;
       }
       @include mq('xs') {
@@ -302,7 +302,7 @@
       & > span {
          padding: 0 2px 0;
          background: linear-gradient(transparent 50%, $primary-light 0%);
-         @include mq('md') {
+         @include mq('lg-md') {
             & > br {
                display: none;
             }
@@ -320,7 +320,7 @@
       display: flex;
       flex-direction: column;
       border: 1px solid $gray-400;
-      @include mq('md') {
+      @include mq('lg-md') {
          flex-direction: row;
       }
       @include mq('xs') {
@@ -344,9 +344,9 @@
       width: 100%;
       height: 200px;
       object-fit: cover;
-      @include mq('md') {
+      @include mq('lg-md') {
          width: 33%;
-         height: auto;
+         height: 100%;
       }
       @include mq('xs') {
          width: 100%;
@@ -359,7 +359,7 @@
       font-size: 14px;
       line-height: 1.3;
       letter-spacing: 1.3px;
-      @include mq('md') {
+      @include mq('lg-md') {
          @include flex-center;
          font-size: 14px;
       }
