--- a/resources/sass/object/project/_p-work-detail.scss
+++ b/resources/sass/object/project/_p-work-detail.scss
@@ -149,7 +149,7 @@
       }
       @include mq('3xs') {
          width: 70%;
-         font-size: 11;
+         font-size: 11px;
       }
    }
    &__infoDate {
